logs/jasily.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/jasily'...
Listing './lib/python3.5/site-packages/jasily/cli'...
Compiling './lib/python3.5/site-packages/jasily/cli/core.py'...
***   File "./lib/python3.5/site-packages/jasily/cli/core.py", line 44
    self._usage_options: UsageOptions = UsageOptions()
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jasily/cli/descriptors.py'...
***   File "./lib/python3.5/site-packages/jasily/cli/descriptors.py", line 18
    self._name: str = None
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jasily/data'...
Listing './lib/python3.5/site-packages/jasily/dependencyinjection'...
Listing './lib/python3.5/site-packages/jasily/format'...
Listing './lib/python3.5/site-packages/jasily/io'...
Compiling './lib/python3.5/site-packages/jasily/objects.py'...
***   File "./lib/python3.5/site-packages/jasily/objects.py", line 184
    self._value_int: int = None
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jasily/text'...
Listing './lib/python3.5/site-packages/jasily/threads'...
Listing './lib/python3.5/site-packages/jasily/typed'...
Listing './lib/python3.5/site-packages/jasily/utils'...
Listing './lib/python3.5/site-packages/jasily-0.1.2.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
